--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "axios": "^1.10.0",
     "dotenv": "^17.0.0",
+    "icons": "^1.0.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
+    "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
